<resources>
    <string name="app_name">SportMen languages</string>
    <string name="network_error">Couldn`t show list of sport men</string>
    <string name="show_all_reviews">Show all sport men</string>
    <string name="add_review">Add player</string>
    <string name="filter_reviews">Filter results</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="your_name">Your name</string>
    <string name="your_country">Your country</string>
    <string name="search_by_name">Search by name</string>
    <string name="title">Title of your player</string>
    <string name="message">Message</string>
    <string name="give_us_a_mark">Give us a mark</string>
    <string name="complete_fields">Please, complete mandatory fields</string>
</resources>
